--- a/src/composer.json
+++ b/src/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "files": [
-            "app/Helpers/statuses.php"
+            "app/Helpers/statuses.php",
+            "app/Helpers/constants.php"
         ],
         "psr-4": {
             "App\\": "app/",
