--- a/src/composer.json
+++ b/src/composer.json
@@ -23,7 +23,8 @@
     "autoload": {
         "files": [
             "app/Helpers/statuses.php",
-            "app/Helpers/constants.php"
+            "app/Helpers/constants.php",
+            "app/Helpers/commonFunctions.php"
         ],
         "psr-4": {
             "App\\": "app/",
