Add a comment to specify external source usage

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,3 +1,5 @@
+# This file has been created with the help of the source mentioned below.
+# https://github.com/hanieas/Docker-Laravel/blob/master/nginx/conf.d/default.conf
 server {
     listen 80;
     server_name localhost;
